# windicator

./: .gitignore  README.md  stack.image.yaml  stack.local.yaml  stack.static.yaml  stack.yaml  windicator.cabal
app/: Main.hs
server/: Main.hs
src/: Windicator.hs
src/Windicator/: Algorithm.hs  Types.hs
srcjs/: Main.js  package.json
