name:                windicator
version:             0.1.0.0
synopsis:            windicator
description:         Please see README.md
homepage:            https://github.com/merc1031/windicator#readme
license:             BSD3
license-file:        LICENSE
author:              Leonidas Loucas
maintainer:          merc1031@gmail.com
copyright:           2016 Leonidas Loucas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Windicator
                     , Windicator.Types
                     , Windicator.Algorithm
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , combinat
  default-language:    Haskell2010

executable windicator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , windicator
                     , aeson-pretty
                     , bytestring
  default-language:    Haskell2010

executable windicator-service-exe
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , windicator
                     , aeson-pretty
                     , bytestring
                     , servant
                     , servant-server
                     , warp
                     , wai
                     , aeson
                     , scientific
                     , text
  default-language:    Haskell2010


test-suite windicator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , windicator
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/merc1031/windicator
